--- a/04_react_practice_nba_app/package.json
+++ b/04_react_practice_nba_app/package.json
@@ -48,6 +48,7 @@
     "react-router-dom": "^4.4.0-beta.6",
     "react-simple-sidenav": "^1.0.1",
     "react-slick": "^0.23.2",
+    "react-transition-group": "^2.5.0",
     "resolve": "1.8.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
@@ -118,5 +119,6 @@
     "presets": [
       "react-app"
     ]
-  }
+  },
+  "devDependencies": {}
 }
